added basic skeleton to html, added contact page

--- a/index.html
+++ b/index.html
@@ -6,6 +6,34 @@
     <title>Nick Schenck's Portfolio</title>
 </head>
 <body>
-    
+    <header>
+        <h1>Hi, I'm Nick Schenck!</h1>
+        <nav>
+            <ul>
+                <li><a href="#about-me">About Me</a></li>
+                <li><a href="#my-projects">My Projects</a></li>
+                <li><a href="#skills">Skills</a></li>
+                <li><a href="./contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <section>
+            <h2>About me:</h2>
+            <p>Stuff and stuff</p>
+            <img src="" alt="Nick Schenck's photo">
+        </section>
+
+        <section>
+            <h2>My Projects:</h2>
+            <a>https://github.com/NickSchenck</a>
+        </section>
+
+        <section>
+            <h2>Qualifications and Skills:</h2>
+            <p>Either anchor tags or img tags, to be decided</p>
+        </section>
+    </main>
 </body>
 </html>
